package vector;

public class Menu {
    public static void printMenu() {
        System.out.println();
        System.out.println("Options:");
        System.out.println("[1] - List repository");
        System.out.println("[2] Add vector to repository");
        System.out.println("[3] Remove vectors from repository");
        System.out.println("[4] Search by point");
        System.out.println("===== Operations on vectors =====");
        System.out.println("[5] - Add vectors ");
        System.out.println("[6] - Subtract vectors");
        System.out.println("[7] - Scalar vectors");
        System.out.println("[0] - Exit");
    }

}
