package vector;

interface Operator {
    double apply(double x, double y);
}


