package vector;

public enum VectorType {
    Vector2D, Vector3D;
//    Vector3D, Vector2D;
}
